<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#edf2fb"
    tools:context=".ui.fragment.profile.ProfileFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout"
                        android:layout_width="match_parent"
                        android:layout_height="360dp"
                        android:background="@drawable/top_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ImageView
                        android:id="@+id/userPFP"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="50dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/white_person" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="80dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/white_background"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/userPFP">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/name_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/name"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/profile_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="viewEnd"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <View
                            android:id="@+id/view"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="#A8B6FF" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/email_TextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/email"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/profile_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="viewEnd"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <View
                            android:id="@+id/view2"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="#A8B6FF" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="15dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/phone_num_textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/phone_number"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/profile_phone_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="viewEnd"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <View
                            android:id="@+id/view3"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="#A8B6FF" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </ScrollView>


    <Button
        android:id="@+id/edit_profile_button"
        android:layout_width="172dp"
        android:layout_height="53dp"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="Edit\nProfile"
        app:icon="@drawable/baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_notifications_settings"/>

    <Button
        android:id="@+id/button_notifications_settings"
        android:layout_width="172dp"
        android:layout_height="53dp"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:layout_marginBottom="20dp"
        android:text="Notification\nSettings"
        app:icon="@drawable/baseline_edit_notifications_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_profile_button" />

    <Button
        android:id="@+id/delete_profile_button"
        android:layout_width="172dp"
        android:layout_height="53dp"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:text="Delete\nProfile"
        app:icon="@drawable/baseline_remove_moderator_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />





</androidx.constraintlayout.widget.ConstraintLayout>