<resources>
    <string name="app_name">Employ-Events</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Employ Events</string>
    <string name="nav_header_subtitle">Join or create an event today!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_facility">Facility</string>
    <string name="menu_profile">Profile</string>

    <string name="organizer_notification_status">Organizer Notifications</string>
    <string name="admin_notification_status">Administrator Notifications</string>
    <string name="user_phone_number">User Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_email">User Email</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="name">Name</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="facility">Facility</string>
    <string name="edit_facility">Edit Facility</string>
    <string name="view_events">View Events</string>
    <string name="view_event">View Event</string>
    <string name="events">Events</string>
    <string name="upload">Upload</string>
...
