...
        <item
            android:id="@+id/nav_invitations"
            android:icon="@drawable/baseline_mark_email_unread_24"
            android:title="@string/menu_invitations" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_image"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_admin_browse_images" />
...
